# homepage

./: .gitignore  Cargo.toml  Dockerfile  Makefile.toml  docker-compose.yml  dockerfile  env.example  index.html  nginx.conf  package-lock.json  package.json  readme.md  tailwind.config.js  vite.config.ts
.github/workflows/: deploy.yml
blog/: test.md
public/blog/: test.md
src/: App.tsx  KatanaWithAura.tsx  River.tsx  app.rs  blog_parser.rs  index.css  lib.rs  main.rs  umami.ts
src/components/: avatar.rs  blog_post.rs  blog_preview.rs  cv.rs  job_preview.rs  mod.rs
src/routes/: about.rs
style/: output.css
styoe/: output.css
